# hbs-substitution-database-manager

./: Cargo.toml
src/: main.rs  pdf_archiver.rs
src/model/: block.rs  class.rs  entry.rs  mod.rs  pdf.rs  substitution.rs  text.rs
