[package]
name = "hbs_substitution_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"

[dependencies.tokio]
version = "1.16.1"
features = ["macros"]

[dependencies.sqlx]
version = "0.5.10"
features = ["runtime-tokio-native-tls", "sqlite"]

[dependencies.reqwest]
version = "0.11.9"
features = ["blocking"]

[dependencies.hbs-table-extractor]
path = "../hbs-table-extractor"